# Relayix

./: .gitignore  LICENSE  README.md  draft.txt  pyproject.toml  pytest.ini
app/: config.py  main.py
app/api/: deps.py
app/api/v1/: chat.py  usage.py
app/api/v1/schemas/: chat.py  usage.py
app/core/: exceptions.py
app/core/accounting/: anthropic_counter.py  openai_counter.py  pricing.py  registry.py  token_counter.py  usage_recorder.py
app/core/adapters/: anthropic_adapter.py  base.py  openai_adapter.py  registry.py
app/core/ratelimit/: base.py  resilient.py  token_bucket.py
app/core/resilience/: circuit_breaker.py  resilient_adapter.py
app/core/routing/: router.py  strategies.py
app/infra/: config.py  global_exceptions.py
app/infra/database/: session.py
app/infra/idempotency/: redis_store.py
app/infra/ratelimit/: redis_client.py  redis_limiter.py
app/infra/security/: crypto.py
app/models/db/: api_key.py  pricing.py  usage_record.py
app/models/domain/: api_key.py  chat.py  enums.py  exceptions.py  idempotency.py  pricing_rate.py  usage_record.py  usage_summary.py
app/observability/: logging.py  request_id.py
app/repositories/: pricing_repo.py  usage_repo.py
app/services/: exceptions.py  gateway_service.py  idempotency_service.py  usage_service.py
docker/: docker-compose-test.yml
docs/core/: accounting.md  adapters.md  ratelimit.md  resilience.md  routing.md
testing/: conftest.py  test_smoke.py
