[project]
name = "relayix"
version = "0.1.0"
description = "LLM gateway with multiple providers"
authors = [
    {name = "MaximoBerth0",email = "maximo1.berth@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "anthropic (>=0.116.0,<0.117.0)",
    "openai (>=2.44.0,<3.0.0)",
    "python-json-logger (>=4.1.0,<5.0.0)",
    "tiktoken (>=0.13.0,<0.14.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
